--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-     <title>𝐎𝐌𝐊𝐀𝐑 𝐀𝐁𝐎𝐔𝐓</title>
+     <title>𝐯𝐢𝐬𝐡𝐚𝐥 𝐚𝐛𝐨𝐮𝐭</title>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -1891,10 +1891,10 @@ var pJS = function (e, a) {
           <input type="checkbox" name="" id="check">
           <div class="card">
                <div class="sidebar" id="sidebar">
-                    <a class="active" href="https://github.com/Omkarsharma30" target="_blank">Github</a>
-                    <a class="active" href="https://www.instagram.com/omkar.sharma_?igsh=MWs1cXF6OTJycGJ6ag==" target="_blank">Instagram</a>
-                    <a class="active" href="#" target="_blank">YouTube</a>
-                    <a class="active" href="https://telegram.dog/https://t.me/Badhacker68" target="_blank">Telegram</a>
+                    <a class="active" href="https://github.com/Vishalchaubey09" target="_blank">Github</a>
+                    <a class="active" href="https://www.instagram.com/vishalchaubey09/?utm_source=qr&r=nametag" target="_blank">Instagram</a>
+                    <a class="active" href="https://youtube.com/@unnhackme?si=m7NGvksEwrKx5jj3" target="_blank">YouTube</a>
+                    <a class="active" href="https://telegram.dog/smartyis" target="_blank">Telegram</a>
                </div>
                <div class="header" onclick="toggle()">
                     <label for="check" class="checkbtn" id="chkbtn">
@@ -1902,7 +1902,7 @@ var pJS = function (e, a) {
                               <div class="center"></div>
                          </div>
                     </label>
-                    <a href="mailto:carvefern.com@gmail.com" class="mail">
+                    <a href="mailto:vishalchoubey0009@gmail.com" class="mail">
                          <i class="fa-regular fa-envelope"></i>
                     </a>
                     <div class="main">
@@ -1912,7 +1912,7 @@ var pJS = function (e, a) {
                               </div>
                          </div>
                          <h3 class="name"></h3>
-                         <h3 class="sub-name">• 【O】【m】【k】【a】【r】• </h3>
+                         <h3 class="sub-name"> ♥ 𝐕𝐈𝐒𝐇𝐀𝐋 ♥ </h3>
                     </div>
                </div>
 
@@ -1920,30 +1920,30 @@ var pJS = function (e, a) {
                     <div class="left">
                          <div class="about-container">
                               <h3 class="title">About</h3>
-                              <p class="text">✦ Cʟᴧss: 𝐂𝐈𝐕𝐈𝐋 𝐄𝐍𝐍𝐆 | Sᴄʜᴏᴏʟ: 𝐆𝐏𝐂 ✦</p>
+                              <p class="text">✦ Cʟᴧss: 𝖈𝖔𝖒𝖕𝖚𝖙𝖊𝖗 𝖘𝖈𝖎𝖊𝖓𝖈 𝖊𝖓𝖌𝖌 | Collage: 𝕴𝕰𝕾 𝖚𝖓𝖎𝖛𝖊𝖗𝖘𝖎𝖙𝖞 ✦</p>
                               <p class="text">~ Dᴇᴠ ~</p>
                               <p class="text">• 𝐇𝐀𝐂𝐊𝐈𝐍𝐆 |𝐕𝐈𝐃𝐄𝐎 𝐄𝐃𝐈𝐓𝐈𝐍𝐆|𝐇𝐓𝐌𝐋|•</p>
                          </div>
                          <div class="icons-container">
-                              <a href="https://github.com/Omkarsharma30" class="icon">
+                              <a href="https://github.com/Vishalchaubey09" class="icon">
                                    <i class="fa-brands fa-github"></i>
                               </a>
-                              <a href="https://www.instagram.com/omkar.sharma_?igsh=MWs1cXF6OTJycGJ6ag==" class="icon">
+                              <a href="https://www.instagram.com/vishalchaubey09/?utm_source=qr&r=nametag" class="icon">
                                    <i class="fa-brands fa-instagram"></i>
                               </a>
-                              <a href="https://telegram.dog/Badhacker68" class="icon">
+                              <a href="https://telegram.dog/smartyis" class="icon">
                                    <i class="fa-brands fa-telegram"></i>
                               </a>
-                              <a href="#" class="icon">
+                              <a href="https://youtube.com/@unnhackme?si=m7NGvksEwrKx5jj3" class="icon">
                                    <i class="fa-brands fa-youtube"></i>
                               </a>
                          </div>
                          <div class="buttons-wrap">
                               <div class="follow-wrap">
-                                   <a href="https://t.me/ethicalhackING34" class="follow">Follow</a>
+                                   <a href="https://www.instagram.com/vishalchaubey09/?utm_source=qr&r=nametag" class="follow">Follow</a>
                               </div>
                               <div class="share-wrap">
-                                   <a href="https://telegram.dog/Badhacker68" class="share">Contact</a>
+                                   <a href="https://telegram.dog/smartyis" class="share">Contact</a>
                               </div>
                          </div>
                     </div>
