--- a/index.html
+++ b/index.html
@@ -1920,9 +1920,9 @@ var pJS = function (e, a) {
                     <div class="left">
                          <div class="about-container">
                               <h3 class="title">About</h3>
-                              <p class="text">✦ Cʟᴧss: 𝖈𝖔𝖒𝖕𝖚𝖙𝖊𝖗 𝖘𝖈𝖎𝖊𝖓𝖈 𝖊𝖓𝖌𝖌 | Collage: 𝕴𝕰𝕾 𝖚𝖓𝖎𝖛𝖊𝖗𝖘𝖎𝖙𝖞 ✦</p>
+                              <p class="text">✦ Cʟᴧss: 𝕔𝕠𝕞𝕡𝕦𝕥𝕖𝕣 𝕤𝕔𝕚𝕖𝕟𝕔𝕖 𝕖𝕟𝕘𝕘 | Collage: 𝕀𝔼𝕊 𝕦𝕟𝕚𝕧𝕖𝕣𝕤𝕚𝕥𝕪 ✦</p>
                               <p class="text">~ Dᴇᴠ ~</p>
-                              <p class="text">• 𝐇𝐀𝐂𝐊𝐈𝐍𝐆 |𝐕𝐈𝐃𝐄𝐎 𝐄𝐃𝐈𝐓𝐈𝐍𝐆|𝐇𝐓𝐌𝐋|•</p>
+                              <p class="text">•ℍ𝕒𝕔𝕜𝕚𝕟𝕘 |𝕨𝕖𝕓 𝕕𝕖𝕧𝕖𝕝𝕠𝕡𝕖𝕣|𝕡𝕪𝕥𝕙𝕠𝕟|•</p>
                          </div>
                          <div class="icons-container">
                               <a href="https://github.com/Vishalchaubey09" class="icon">
