--- a/index.html
+++ b/index.html
@@ -1920,7 +1920,7 @@ var pJS = function (e, a) {
                     <div class="left">
                          <div class="about-container">
                               <h3 class="title">About</h3>
-                              <p class="text">✦ Cʟᴧss: 𝕔𝕠𝕞𝕡𝕦𝕥𝕖𝕣 𝕤𝕔𝕚𝕖𝕟𝕔𝕖 𝕖𝕟𝕘𝕘 | Collage: 𝕀𝔼𝕊 𝕦𝕟𝕚𝕧𝕖𝕣𝕤𝕚𝕥𝕪 ✦</p>
+                              <p class="text">✦ Course: 𝕔𝕠𝕞𝕡𝕦𝕥𝕖𝕣 𝕤𝕔𝕚𝕖𝕟𝕔𝕖 𝕖𝕟𝕘𝕘 | Collage: 𝕀𝔼𝕊 𝕦𝕟𝕚𝕧𝕖𝕣𝕤𝕚𝕥𝕪 ✦</p>
                               <p class="text">~ Dᴇᴠ ~</p>
                               <p class="text">•ℍ𝕒𝕔𝕜𝕚𝕟𝕘 |𝕨𝕖𝕓 𝕕𝕖𝕧𝕖𝕝𝕠𝕡𝕖𝕣|𝕡𝕪𝕥𝕙𝕠𝕟|•</p>
                          </div>
